--- a/Code/main/accessory_detect.ipynb
+++ b/Code/main/accessory_detect.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "1b318a43",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "p = Path(os.path.abspath(os.getcwd()))\n",
+    "path = Path(p)\n",
+    "sys.path.insert(0, str(path.parent.absolute()) + '/sub')\n",
+    "\n",
     "from imu_processing import *\n",
     "from plotting import *\n",
     "import pandas as pd\n",
@@ -19,6 +27,30 @@
     "\n",
     "model_path = cwd+\"/Models/\"\n",
     "svm = load_model(model_path + \"SVM20230312\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e5549a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jaemi\\lab_magacc\\Code\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "p = os.path.abspath(os.getcwd())\n",
+    "test = Path(p)\n",
+    "par = test.parent.absolute()\n",
+    "print(str(par))"
    ]
   },
   {
