--- a/Code/main/model_test.ipynb
+++ b/Code/main/model_test.ipynb
@@ -29,13 +29,19 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "p = Path(os.path.abspath(os.getcwd()))\n",
+    "path = Path(p)\n",
+    "sys.path.insert(0, str(path.parent.absolute()) + '/sub')\n",
+    "\n",
+    "from magclassification import *\n",
+    "from imu_processing import *\n",
     "from show_data import *\n",
     "from plotting import *\n",
     "from machine_learning import *\n",
-    "import os\n",
-    "import sys\n",
-    "from magclassification import *\n",
-    "from imu_processing import *\n",
     "\n",
     "cwd = 'C:/Users/jaemi/lab_magacc'\n",
     "data_cwd = cwd + '/Data/'\n",
@@ -51,33 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for imu\n",
     "path = data_cwd + 'Test20230303/IMU'\n",
     "imu_data = IMU(path)\n",
-    "data = imu_data[0].data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "angle 0: 17.469148588567307\n",
-      "angle 1: -90.22281423350998\n",
-      "angle 2: 36428.657628435525\n"
-     ]
-    }
-   ],
-   "source": [
-    "gyro_angle(data)"
+    "data = imu_data[0].data"
    ]
   },
   {
@@ -91,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -139,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "id": "FSnw3dcztc89"
    },
@@ -275,9 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
