--- a/Code/main/accessory_detect.ipynb
+++ b/Code/main/accessory_detect.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "1b318a43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jaemi\\lab_magacc\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -22,7 +30,7 @@
     "from machine_learning import *\n",
     "from magclassification import *\n",
     "\n",
-    "cwd = 'C:/Users/jaemi/lab_magacc'\n",
+    "cwd = path.parent.parent.absolute()\n",
     "data_cwd = cwd + '/Data/'\n",
     "\n",
     "model_path = cwd+\"/Models/\"\n",
